--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_SMS" />
+    >
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -44,13 +45,14 @@
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher_round"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
-        android:supportsRtl="true"
         android:enableOnBackInvokedCallback="true"
-        android:theme="@style/Theme.TaxiEasyUa"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.TaxiEasyUa"
+        tools:replace="android:allowBackup"
         tools:targetApi="tiramisu">
 
         <meta-data
@@ -69,8 +71,10 @@
             tools:ignore="DiscouragedApi,Instantiatable,LockedOrientationActivity"
             android:exported="false"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
+
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="DiscouragedApi,Instantiatable,LockedOrientationActivity"
@@ -85,9 +89,9 @@
 
         <activity
             android:name=".ui.open_map.OpenStreetMapActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="DiscouragedApi,Instantiatable,LockedOrientationActivity"
-            android:exported="true"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
 
         <activity android:name=".ui.open_map.OpenStreetMapVisicomActivity"
@@ -120,24 +124,22 @@
             android:excludeFromRecents="true"
             android:screenOrientation="portrait"
             tools:ignore="DiscouragedApi,Instantiatable,LockedOrientationActivity"
-            android:theme="@android:style/Theme.NoDisplay"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.NoDisplay" />
 
         <activity android:name="com.taxi.easy.ua.ui.exit.AnrActivity"
             android:excludeFromRecents="true"
             android:screenOrientation="portrait"
             tools:ignore="DiscouragedApi,Instantiatable,LockedOrientationActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
 
-        <receiver android:name="com.taxi.easy.ua.utils.connect.NetworkChangeReceiver" />
 
         <provider
             android:name=".androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.InitializationProvider"
             android:exported="false"
-            android:enabled="true">
-        </provider>
+            android:enabled="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -158,6 +160,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
