--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ plugins {
 
 android {
     namespace 'com.taxi.easy.ua'
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.taxi.easy.ua"
         minSdk 26
-        targetSdk 35
-        versionCode 1828
-        versionName '1.828'
+        targetSdk 36
+        versionCode 1829
+        versionName '1.829'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
         multiDexEnabled true
@@ -54,15 +54,15 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'androidx.datastore:datastore-preferences:1.1.7'
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
-    implementation 'androidx.databinding:databinding-runtime:8.10.1'
+    implementation 'androidx.databinding:databinding-runtime:8.11.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
     implementation "androidx.preference:preference:1.2.1"
 
     implementation "androidx.datastore:datastore-preferences:1.1.7"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
 
     // Firebase зависимости (с использованием BOM)
-    implementation platform('com.google.firebase:firebase-bom:33.15.0')
+    implementation platform('com.google.firebase:firebase-bom:33.16.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-messaging'
@@ -72,11 +72,11 @@ dependencies {
 
 
     // Retrofit и OkHttp
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:3.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
 
 
 
@@ -93,8 +93,8 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
     // Parse SDK (для работы с Parse сервером)
-    implementation "com.github.parse-community.Parse-SDK-Android:parse:4.2.0"
-    implementation "com.github.parse-community.Parse-SDK-Android:google:4.2.0"
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:4.3.0"
+    implementation "com.github.parse-community.Parse-SDK-Android:google:4.3.0"
 
     // ConstraintLayout и жизненный цикл
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
@@ -104,10 +104,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.9.0'
 
     // Firebase UI для аутентификации
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.firebaseui:firebase-ui-auth:9.0.0'
 
     // Osmdroid и osmbonuspack
-    implementation 'org.osmdroid:osmdroid-android:6.1.16'
+    implementation 'org.osmdroid:osmdroid-android:6.1.20'
     implementation 'com.github.MKergall:osmbonuspack:6.9.0'
 
     // Пиксельная обработка изображений
@@ -124,11 +124,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
 
     //Pusher
-    implementation 'com.pusher:pusher-java-client:2.4.2'
+    implementation 'com.pusher:pusher-java-client:2.4.4'
 
     //Mask Edit
     implementation 'com.redmadrobot:input-mask-android:7.2.4'
@@ -144,13 +144,17 @@ dependencies {
 
     //worker
     implementation "androidx.work:work-runtime:2.10.2"
+    implementation 'androidx.concurrent:concurrent-futures:1.2.0'
 
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+
 }
+
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ["-Xlint:deprecation"]
 }
+
 
