--- a/settings.gradle
+++ b/settings.gradle
@@ -11,9 +11,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven { url = "https://jitpack.io" }
         maven{
-            url 'https://sdk.uxcam.com/android/'
+            url = 'https://sdk.uxcam.com/android/'
         }
     }
 }
