--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ plugins {
 
 android {
     namespace 'com.taxi.easy.ua'
-    compileSdk 36
+    compileSdk = 36
 
     defaultConfig {
         applicationId "com.taxi.easy.ua"
-        minSdk 26
-        targetSdk 36
-        versionCode 1829
-        versionName '1.829'
+        minSdk = 26
+        targetSdk = 36
+        versionCode = 1830
+        versionName = '1.830'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
         multiDexEnabled true
@@ -43,7 +43,6 @@ android {
         buildConfig = true
     }
 }
-
 dependencies {
     // Основные зависимости
     implementation 'androidx.multidex:multidex:2.0.1'
