--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk = 26
         targetSdk = 36
-        versionCode = 1841
-        versionName = '1.841'
+        versionCode = 1842
+        versionName = '1.842'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
         multiDexEnabled = true
@@ -42,19 +42,29 @@ android {
         viewBinding = true
         buildConfig = true
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            animationsDisabled = true
+            all {
+                // Переопределяем targetSdkVersion для Robolectric
+                systemProperty 'robolectric.enabledSdks', '28,29,30,31,32,33,34,35'
+            }
+        }
+    }
 }
 
 dependencies {
     // Основные зависимости
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.core:core:1.16.0'
+    implementation 'androidx.core:core:1.17.0'
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'androidx.datastore:datastore-preferences:1.1.7'
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
-    implementation 'androidx.databinding:databinding-runtime:8.12.0'
+    implementation 'androidx.databinding:databinding-runtime:8.12.1'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
     implementation "androidx.preference:preference:1.2.1"
 
@@ -62,11 +72,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
 
     // Firebase зависимости (с использованием BOM)
-    implementation platform('com.google.firebase:firebase-bom:34.0.0')
+    implementation platform('com.google.firebase:firebase-bom:34.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-messaging'
-    implementation "com.google.firebase:firebase-firestore-ktx:25.1.4"
+    // Firestore без версии
+    implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.datatransport:transport-runtime:4.0.0'
 
@@ -100,8 +111,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.2'
-    implementation 'androidx.navigation:navigation-fragment:2.9.2'
-    implementation 'androidx.navigation:navigation-ui:2.9.2'
+    implementation 'androidx.navigation:navigation-fragment:2.9.3'
+    implementation 'androidx.navigation:navigation-ui:2.9.3'
 
     // Firebase UI для аутентификации
     implementation 'com.firebaseui:firebase-ui-auth:9.0.0'
@@ -120,11 +131,24 @@ dependencies {
     // Стартовые зависимости
     implementation 'androidx.startup:startup-runtime:1.2.0'
 
-    // Тестовые зависимости
+    // Unit-тесты (JVM)
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    testImplementation 'org.mockito:mockito-core:5.19.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:5.1.0'
+    testImplementation 'org.robolectric:robolectric:4.15.1'
+
+    // Instrumented-тесты (на устройстве/эмуляторе)
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test:core:1.7.0'
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.7.0"
+
+
+    // Mockito для создания мок-объектов
+    androidTestImplementation 'org.mockito:mockito-core:5.19.0'
+    androidTestImplementation 'org.mockito:mockito-android:5.19.0'
 
 
     //Pusher
@@ -137,13 +161,13 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.3.1'
 
     // тепловой след
-    implementation 'com.uxcam:uxcam:3.7.0'
+    implementation 'com.uxcam:uxcam:3.7.1'
 
     //security
-    implementation "androidx.security:security-crypto:1.1.0-beta01"
+    implementation "androidx.security:security-crypto:1.1.0"
 
     //worker
-    implementation "androidx.work:work-runtime:2.10.2"
+    implementation "androidx.work:work-runtime:2.10.3"
     implementation 'androidx.concurrent:concurrent-futures:1.3.0'
 
 
