--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,20 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk = 26
         targetSdk = 36
-        versionCode = 1845
-        versionName = '1.845'
+        versionCode = 1846
+        versionName = '1.846'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
         multiDexEnabled = true
-// порядок элементов списка не имеет значения
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file("keystore/com.taxi.easy.ua_debug.keystore")
+            storePassword "android"
+            keyAlias "AndroidDebugKey"
+            keyPassword "android"
+        }
     }
 
     buildTypes {
@@ -65,10 +73,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
 
     // Firebase зависимости (с использованием BOM)
-    implementation platform('com.google.firebase:firebase-bom:34.2.0')
+    implementation platform('com.google.firebase:firebase-bom:34.3.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-storage:22.0.1'
     // Firestore без версии
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth'
@@ -93,7 +102,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-wallet:19.4.0'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation 'com.google.android.gms:play-services-base:18.7.2'
+    implementation 'com.google.android.gms:play-services-base:18.8.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
     // Parse SDK (для работы с Parse сервером)
@@ -102,10 +111,10 @@ dependencies {
 
     // ConstraintLayout и жизненный цикл
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.3'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.3'
-    implementation 'androidx.navigation:navigation-fragment:2.9.3'
-    implementation 'androidx.navigation:navigation-ui:2.9.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.4'
+    implementation 'androidx.navigation:navigation-fragment:2.9.4'
+    implementation 'androidx.navigation:navigation-ui:2.9.4'
 
     // Firebase UI для аутентификации
     implementation 'com.firebaseui:firebase-ui-auth:9.0.0'
@@ -118,15 +127,15 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Room для работы с локальной базой данных
-    implementation "androidx.room:room-runtime:2.7.2"
-    annotationProcessor "androidx.room:room-compiler:2.7.2"
+    implementation "androidx.room:room-runtime:2.8.0"
+    annotationProcessor "androidx.room:room-compiler:2.8.0"
 
     // Стартовые зависимости
     implementation 'androidx.startup:startup-runtime:1.2.0'
 
     // Unit-тесты (JVM)
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:5.19.0'
+    testImplementation 'org.mockito:mockito-core:5.20.0'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:5.1.0'
     testImplementation 'org.robolectric:robolectric:4.16'
@@ -140,8 +149,8 @@ dependencies {
 
 
     // Mockito для создания мок-объектов
-    androidTestImplementation 'org.mockito:mockito-core:5.19.0'
-    androidTestImplementation 'org.mockito:mockito-android:5.19.0'
+    androidTestImplementation 'org.mockito:mockito-core:5.20.0'
+    androidTestImplementation 'org.mockito:mockito-android:5.20.0'
 
 
     //Pusher
@@ -154,13 +163,13 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.3.1'
 
     // тепловой след
-    implementation 'com.uxcam:uxcam:3.7.2'
+    implementation 'com.uxcam:uxcam:3.7.3'
 
     //security
     implementation "androidx.security:security-crypto:1.1.0"
 
     //worker
-    implementation "androidx.work:work-runtime:2.10.3"
+    implementation "androidx.work:work-runtime:2.10.4"
     implementation 'androidx.concurrent:concurrent-futures:1.3.0'
 
 
